admission/validatingAdmissionPolicies/policies/nodeport/test.yaml
apiVersion: v1
kind: Service
metadata:
  name: violating-nodeport
  namespace: policy-test
spec:
  type: NodePort
  selector:
    app: test
  ports:
  - name: web
    port: 80
    targetPort: 80
    nodePort: 30080
