admission/validatingAdmissionPolicies/policies/nodeport/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: service-nodeport-namespace-optout-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 0478b47e-f601-59c1-a372-f35eeb2d1c55
  labels:
    check-service-nodeport.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/warn: enabled
    check-service-nodeport.security.kolteq.com/audit: 'false,true'
    check-service-nodeport.security.kolteq.com/enforce: 'false,true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
spec:
  policyName: service-nodeport
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/warn
        operator: In
        values:
        - enabled
      - key: check-service-nodeport.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: service-nodeport-namespace-optin-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 0478b47e-f601-59c1-a372-f35eeb2d1c55
  labels:
    check-service-nodeport.security.kolteq.com/warn: 'false,true'
    check-service-nodeport.security.kolteq.com/audit: 'false,true'
    check-service-nodeport.security.kolteq.com/enforce: 'false,true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: service-nodeport
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-service-nodeport.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: service-nodeport-namespace-optout-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 0478b47e-f601-59c1-a372-f35eeb2d1c55
  labels:
    check-service-nodeport.security.kolteq.com/audit: 'false,true'
    security.kolteq.com/audit: enabled
    check-service-nodeport.security.kolteq.com/enforce: 'false,true'
    check-service-nodeport.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: service-nodeport
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/audit
        operator: In
        values:
        - enabled
      - key: check-service-nodeport.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: service-nodeport-namespace-optin-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 0478b47e-f601-59c1-a372-f35eeb2d1c55
  labels:
    check-service-nodeport.security.kolteq.com/audit: 'false,true'
    check-service-nodeport.security.kolteq.com/enforce: 'false,true'
    check-service-nodeport.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: service-nodeport
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-service-nodeport.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: service-nodeport-namespace-optout-enforce
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 0478b47e-f601-59c1-a372-f35eeb2d1c55
  labels:
    check-service-nodeport.security.kolteq.com/enforce: 'false,true'
    security.kolteq.com/enforce: enabled
    check-service-nodeport.security.kolteq.com/audit: 'false,true'
    check-service-nodeport.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: service-nodeport
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/enforce
        operator: In
        values:
        - enabled
      - key: check-service-nodeport.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: service-nodeport-namespace-optin-enforce
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 0478b47e-f601-59c1-a372-f35eeb2d1c55
  labels:
    check-service-nodeport.security.kolteq.com/enforce: 'false,true'
    check-service-nodeport.security.kolteq.com/audit: 'false,true'
    check-service-nodeport.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: service-nodeport
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-service-nodeport.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
